--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ backend/.dockerignore
 frontend/note-app-frontend/node_modules
 frontend/note-app-frontend/.env.local
 frontend/note-app-frontend/.dockerignore
+frontend/note-app-frontend/build
+compose.yaml
