--- a/frontend/note-app-frontend/Dockerfile
+++ b/frontend/note-app-frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:22-apline AS builder
+FROM node:22-alpine AS builder
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
@@ -7,5 +7,6 @@ RUN npm run build
 
 FROM nginx:alpine
 COPY --from=builder /app/build /usr/share/nginx/html
-EXPOSE 3000
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
